[gd_scene load_steps=3 format=3 uid="uid://b01b6pexexnil"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_qjmq7"]
[ext_resource type="LabelSettings" uid="uid://d0fwuptej0tsx" path="res://pixelated_label.tres" id="2_lfgw5"]

[node name="OptionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qjmq7")

[node name="MarginContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.5
offset_top = -108.0
offset_right = 262.5
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Volume "
label_settings = ExtResource("2_lfgw5")

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2

[node name="Fullscreen" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Fullscreen"]
layout_mode = 2
text = "Fullscreen "
label_settings = ExtResource("2_lfgw5")

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/Fullscreen"]
layout_mode = 2

[node name="SaveBack" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/SaveBack"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/SaveBack/Save"]
layout_mode = 2
offset_left = 26.5
offset_top = -2.0
offset_right = 148.5
offset_bottom = 40.0
text = "Save"
label_settings = ExtResource("2_lfgw5")

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/SaveBack"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/SaveBack/Back"]
layout_mode = 2
offset_left = 29.5
offset_top = -1.0
offset_right = 151.5
offset_bottom = 41.0
text = "Back"
label_settings = ExtResource("2_lfgw5")

[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Fullscreen/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SaveBack/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SaveBack/Back" to="." method="_on_button_pressed"]
